<resources>
    <string name="app_name">RefuelApp</string>
    <string name="self_1">self-service</string>
    <string name="self_0">servito</string>
    <string name="price_by_liter">0.000€/l</string>
    <string name="service_plant">service</string>
    <string name="distanza">distanza</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="logo_description">logo of gasoline company</string>
    <string name="days_last_update">days_last_update</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_favorites">Favoriti</string>
    <string name="detail_gasoline_plant_string">Detail fragment</string>
    <string name="name_plant">name_plant</string>
    <string name="city">City</string>
    <string name="location_button">Portami qui</string>
    <string name="fuel_pump_icon">Fuel pump icon</string>
    <string name="data">-/-/- —:—:—</string>
    <string name="fuel_type">Tipo carburante</string>
    <string name="nav_menu_account">Account</string>
    <string name="settings">Settings</string>
    <string name="submit">Vota</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi o registrati</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">La password dev\'essere di almeno 5 caratteri</string>
    <string name="login_failed">"Login fallito"</string>
    <string name="login_here">Login qui</string>
    <string name="already_registered">Già registrato</string>
    <string name="register">Registrati</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_activity">RegisterActivity</string>
    <string name="register_here">Registrati qui</string>
    <string name="not_registered_yet">Non ancora registrato?</string>
    <string name="login">Login</string>
    <string name="account_image">account_image</string>
    <string name="username">username</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_log_out">Logout</string>
    <string name="nav_menu_report">Report</string>
    <string name="gpl_report_label">GPL:</string>
    <string name="gasolio_report_label">Gasolio:</string>
    <string name="benzina_report_label">Benzina:</string>
    <string name="title_report">Prezzi medi carburanti in Italia:</string>
    <string name="date_last_update_report_label">Ultimo aggiornamento prezzi:</string>
    <string name="name_plant_refuel_account">name_plant_refuel_account</string>
    <string name="litri">litri</string>
    <string name="price">soldi spesi</string>
    <string name="prezzo_euro_litro">prezzo euro/litro</string>
    <string name="km_percorsi">km percorsi</string>
    <string name="add_refuel_item_button">add_refuel_item_button</string>
    <string name="default_text_date_lastupdate">Sconosciuto</string>
    <string name="add_another_fuel_text">Scegli un altro carburante da visualizzare:</string>
    <string name="btn_add_another_fuel">Scegli</string>
    <string name="btn_save_new_refuel_item">Salva</string>
    <string name="title_items">Rifornimenti salvati:</string>
    <string name="no_avg_rating">0.0</string>
    <string name="zero_ratings">(0)</string>
    <string name="si">Sì</string>
    <string name="no">No</string>
    <string name="LITRI">LITRI</string>
    <string name="kilometri">Kilometri</string>
    <string name="Date">Data</string>
    <string name="Insert_plant">Inserisci il distributore:</string>
    <string name="login_continue_withoutlogin_label">Continua</string>
    <string name="continue_without_login_textlink">senza registrarti</string>
</resources>