<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/gasolinePlantsListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_menu_home"/>
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_favorites_24"
        android:title="@string/nav_menu_favorites"/>
    <item
        android:id="@+id/reportFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/nav_menu_report"/>
    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/nav_menu_account"/>
</menu>