<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/teal_A500"
    android:padding="16dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/account_img_drawer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/account_image"
        android:src="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_drawer"
        android:layout_marginStart="5dp"
        android:layout_below="@id/account_img_drawer"
        android:text="@string/username"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_drawer_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_img_drawer"
        android:text="@string/btn_sign_in"
        android:visibility="visible"
        app:backgroundTint="@color/teal_A300"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_drawer_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/username_drawer"
        android:text="@string/btn_log_out"
        android:visibility="invisible"
        app:backgroundTint="@color/teal_A300"
        tools:visibility="visible" />

</RelativeLayout>