<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/price_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:id="@+id/fuel_type_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon_fuel_pump"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/fuel_pump_icon"

                    android:src="@drawable/ic_fuel_pump_black" />

                <TextView
                    android:id="@+id/fuel_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fuel_type" />

            </LinearLayout>

            <TextView
                android:id="@+id/fuel_service"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/fuel_type_box"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/service_plant" />

            <TextView
                android:id="@+id/fuel_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fuel_service"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/price_by_liter"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_toEndOf="@id/fuel_price"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_last_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/data" />

                <TextView
                    android:id="@+id/days_by_last_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/days_last_update" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>