<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="dia.units.refuelapp.ReportFragment">

    <TextView
        android:id="@+id/title_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_report"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/teal700" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_self_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_report"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="Self Service" />

    <LinearLayout
        android:id="@+id/benzina_report_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_self_service"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benzina_report_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/avg_price_benzina_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gasolio_report_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/benzina_report_container"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasolio_report_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/avg_price_gasolio_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gpl_report_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gasolio_report_container"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpl_report_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/avg_price_gpl_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_last_update_report_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpl_report_container"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_last_update_report_label" />

        <TextView
            android:id="@+id/date_last_update_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/default_text_date_lastupdate"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart_avg_prices_fuels"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/date_last_update_report_container"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_another_fuel_container"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@id/chart_avg_prices_fuels"
        android:text="@string/add_another_fuel_text" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_another_fuel"
        android:layout_below="@id/add_another_fuel_container"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/btn_add_another_fuel"
        app:backgroundTint="@color/teal400"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>