<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/date_refuel_item_container"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/date_refuel_item"
            android:text="@string/data"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginStart="20dp"/>

        <ImageButton
            android:id="@+id/btn_delete_refuel_item"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@null"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/refuel_account_item_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/plant_refuel_account_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/logo_plant_refuel_item"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_description" />

                <TextView
                    android:id="@+id/name_plant_refuel_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/name_plant_refuel_account"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/refuel_account_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/plant_refuel_account_container"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/liters_refuel_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/litri"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/liters_refuel_item_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/litri" />

                <TextView
                    android:id="@+id/money_refuel_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/refuel_account_container"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/statistic_refuel_account_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/refuel_account_container"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/price_by_liter_refuel_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/prezzo_euro_litro"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/lkilometers_refuel_item_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:paddingTop="10dp"
                    android:text="km" />
                <TextView
                    android:id="@+id/kilometers_refuel_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/km_percorsi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>