<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="dia.units.refuelapp.DetailGasolinePlantFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/detail_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo_description"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:src="@drawable/esso" />

                <LinearLayout
                    android:id="@+id/detail_info_container"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/detail_logo"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/indirizzo" />

                    <TextView
                        android:id="@+id/detail_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/city" />

                    <LinearLayout
                        android:id="@+id/rating_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rating_avg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_avg_rating" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="2dp"
                            android:src="@drawable/ic_baseline_star_24" />

                        <TextView
                            android:id="@+id/rating_tot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:text="@string/zero_ratings" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/checkbox_container"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/detail_info_container"
                    android:gravity="end">

                    <CheckBox
                        android:id="@+id/checkbox_add_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:button="@drawable/favourites_icon"
                        android:buttonTint="@color/yellow" />
                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/detail_location_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:text="@string/location_button"
                app:backgroundTint="@color/teal400"
                app:icon="@drawable/ic_baseline_location_on_24"
                app:iconGravity="textStart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_gasoline_prices_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:listitem="@layout/recyclerview_price_item" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:fillViewport="true"
                        android:numStars="5"
                        android:stepSize="1"
                        android:theme="@style/RatingBar" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit_rating_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:text="@string/submit"
                        app:backgroundTint="@color/teal400" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </FrameLayout>
</ScrollView>